highcharts to https

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -22,7 +22,7 @@
 		<!-- datatables css cdn -->
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.15/fh-3.1.2/r-2.1.1/datatables.min.css"/>
 		<!-- highcharts -->
-		<script src="http://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/highcharts.js"></script>
 
 
 
