--- a/cfbets/templates/base_profile.html
+++ b/cfbets/templates/base_profile.html
@@ -52,7 +52,7 @@
 		<div id="user-stats" class="tab-pane fade">
 			<br/>
 			<div class="alert alert-info">
-				<span class="glyphicon glyphicon-info-sign"></span> Check out the new <a href="/bets/your_stats" class="alert-link"><u>stats dashboards!</u></a>.
+				<span class="glyphicon glyphicon-info-sign"></span> Check out the new <a href="/bets/your_stats" class="alert-link"><u>stats dashboards!</u></a>
 			</div>
 			<div class="container col-md-6">
 				<table class="table table-striped table-condensed">
