--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -7,7 +7,7 @@
 		<div class="container">
 			{% if open_bets %}
 				<p>These are all the open bets from other users. Accept these bets with reckless abandon.<p>
-				<table class="table table-striped table-bordered table-condensed table-responsive">
+				<table class="table table-striped table-bordered table-condensed table-responsive" id=openBets>
 					<thead>
 					  <tr>
 						<th>Prop Bet</th>
@@ -105,4 +105,9 @@
 			}
 		});
 	});
+
+    $('#openBets').dataTable( {
+        "order": [],
+		"paging": false
+    } );
 {% endblock %}
