--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -40,7 +40,7 @@
 			{% endif %}
 		</div>
 		<div class="container">
-			<h3>Your Active Bets</h3>
+            <h3>Your Active Bets ({{ your_active_bets_count}})</h3>
 			{% if your_active_bets %}
 				<table class="table table-striped table-bordered">
 					<thead>
