--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -1,4 +1,36 @@
 {% extends "base.html" %}
+{% load i18n %}
+
+{% block extra_head %}
+    <script type="text/javascript">
+        var ALL_BETS_JSON_URL = '{% url "bets:all_bets_json" %}';
+        // translations for datatables
+
+        var dt_language = {
+            "emptyTable":     "{% trans "No data available in table" %}",
+            "info":           "{% trans "Showing _START_ to _END_ of _TOTAL_ entries" %}",
+            "infoEmpty":      "{% trans "Showing 0 to 0 of 0 entries" %}",
+            "infoFiltered":   "{% trans "(filtered from _MAX_ total entries)" %}",
+            "infoPostFix":    "",
+            "thousands":      ",",
+            "lengthMenu":     "{% trans "Show _MENU_ entries" %}",
+            "loadingRecords": "{% trans "Loading..." %}",
+            "processing":     "{% trans "Processing..." %}",
+            "search":         "{% trans "Search:" %}",
+            "zeroRecords":    "{% trans "No matching records found" %}",
+            "paginate": {
+                "first":      "{% trans "First" %}",
+                "last":       "{% trans "Last" %}",
+                "next":       "{% trans "Next" %}",
+                "previous":   "{% trans "Previous" %}"
+            },
+            "aria": {
+                "sortAscending":  "{% trans ": activate to sort column ascending" %}",
+                "sortDescending": "{% trans ": activate to sort column descending" %}"
+            }
+        }
+    </script>
+{% endblock %}
 
 {% block base_content %}
 
@@ -34,48 +66,44 @@
 		</div>
 		<div class="container">
 			<h3>Completed Bets</h3>
-			{% if all_accepted_bets %}
 				<p>All closed accepted bets. These are accepted bets that have a winner marked (aka closed).</p>
 				<table class="table table-striped table-bordered table-condensed" id="closedAccepted">
 					<thead>
 					  <tr>
-						<th>Proposer</th>
-						<th>Proposee</th>
-						<th>Prop Bet</th>
-						<th>Wager</th>
-						<th>Winner</th>
+                                                <th>{% trans "Proposer" %}</th>
+                                                <th>{% trans "Proposee" %}</th>
+                                                <th>{% trans "Prop Bet" %}</th>
+                                                <th>{% trans "Wager" %}</th>
+                                                <th>{% trans "Winner" %}</th>
 					  </tr>
 					</thead>
 					<tbody>
-					{% for bet in all_accepted_bets %}
-						<tr>
-							<td>{{ bet.accepted_prop.user.get_full_name }}</td>
-							<td>{{ bet.accepted_user.get_full_name }}</td>
-							<td>{{ bet.accepted_prop.prop_text }}</td>
-							<td>${{ bet.accepted_prop.prop_wager }}</td>
-							{% if bet.accepted_prop.get_won_bet_display == "Win" %}
-								<td>{{ bet.accepted_prop.user.get_full_name }}</td>
-							{% elif bet.accepted_prop.get_won_bet_display == "Loss" %}
-								<td>{{ bet.accepted_user.get_full_name }}</td>
-							{% elif bet.accepted_prop.get_won_bet_display == "Tie" %}
-								<td>push</td>
-							{% else %}
-								<td></td>
-							{% endif %}
-						</tr>
-					{% endfor %}
 					</tbody>
 				</table>
-			{% else %}
-			<p>No completed bets?! We must be just getting started.</p>
-			{% endif %}
 		</div>
     </div>
 
 {% endblock %}
 
 {% block morejs %}
-	$('#closedAccepted').dataTable( {
-		"order": []
-	} );
+	    var dt_table = $('#closedAccepted').dataTable({
+		language: dt_language,  // global variable defined in html
+                order: [],
+		lengthMenu: [10, 25, 50, 100],
+		columnDefs: [
+		    {orderable: true,
+		     searchable: true,
+		     className: "center",
+		     targets: [0, 1, 2, 3]
+		    },
+                    {orderable: false,
+                    targets: -1
+                    }
+		],
+		searching: true,
+		processing: true,
+		serverSide: true,
+		stateSave: false,
+		ajax: ALL_BETS_JSON_URL
+	    });
 {% endblock %}
