--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -216,6 +216,10 @@
 					$('#id_bet_expiration_date').val(curr_month + "/" + curr_date + "/" + curr_year + " 12:00");
 				});
 
+                                $('#place-bets-form').one('submit', function() {
+                                            $(this).find('input[type="submit"]').prop('disabled', true);
+                                });
+
 				$('#place-bets-form').on('submit', function(event) {
 					event.preventDefault();
 					$.ajax({
