--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -73,7 +73,7 @@
 
 {% block morejs %}
         $('#accept-prop-btn').click(function(){
-            $(this).prop('disabled', true);
+            $(this).attr('disabled', true);
             });
 
 	$('#acceptBet').on('show.bs.modal', function (e) {
