--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -216,11 +216,11 @@
 					$('#id_bet_expiration_date').val(curr_month + "/" + curr_date + "/" + curr_year + " 12:00");
 				});
 
-                                $('#place-bet-btn').click(function(){
-                                        $(this).prop('disabled', true);
-                                });
-
 				$('#place-bets-form').on('submit', function(event) {
+					event.preventDefault();
+					});
+
+				$('#place-bets-form').one('submit', function(event) {
 					event.preventDefault();
 					$.ajax({
 						type: "POST",
@@ -238,7 +238,6 @@
 					});
 					return false;
 					});
-
 				{% block morejs %}
 				{% endblock %}
 			});
