--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -44,7 +44,7 @@
 			{% endif %}
 		</div>
 		<div class="container">
-            <h3>Your Active Bets ({{ your_active_bets_count}})</h3>
+            <h3>Your Active Bets</h3>
 			{% if your_active_bets %}
 				<table class="table table-striped table-bordered">
 					<thead>
@@ -55,6 +55,14 @@
 						<th>Wager</th>
 					  </tr>
 					</thead>
+                                        <tfoot>
+                                                <tr>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th></th>
+                                                        <th><span class="badge">{{ your_active_bets_count }} active, ${{ your_active_bets_total_amount }} total</span></th>
+                                                </tr>
+                                        </tfoot>
 					<tbody>
 					{% for bet in your_active_bets %}
 						<tr>
