--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -1,4 +1,36 @@
 {% extends "base.html" %}
+{% load i18n %}
+
+{% block extra_head %}
+    <script type="text/javascript">
+        var MY_COMPLETED_BETS_JSON_URL = '{% url "bets:my_completed_bets_json" %}';
+        // translations for datatables
+
+        var dt_language = {
+            "emptyTable":     "{% trans "No data available in table" %}",
+            "info":           "{% trans "Showing _START_ to _END_ of _TOTAL_ entries" %}",
+            "infoEmpty":      "{% trans "Showing 0 to 0 of 0 entries" %}",
+            "infoFiltered":   "{% trans "(filtered from _MAX_ total entries)" %}",
+            "infoPostFix":    "",
+            "thousands":      ",",
+            "lengthMenu":     "{% trans "Show _MENU_ entries" %}",
+            "loadingRecords": "{% trans "Loading..." %}",
+            "processing":     "{% trans "Processing..." %}",
+            "search":         "{% trans "Search:" %}",
+            "zeroRecords":    "{% trans "No matching records found" %}",
+            "paginate": {
+                "first":      "{% trans "First" %}",
+                "last":       "{% trans "Last" %}",
+                "next":       "{% trans "Next" %}",
+                "previous":   "{% trans "Previous" %}"
+            },
+            "aria": {
+                "sortAscending":  "{% trans ": activate to sort column ascending" %}",
+                "sortDescending": "{% trans ": activate to sort column descending" %}"
+            }
+        }
+    </script>
+{% endblock %}
 
 {% block base_content %}
 
@@ -6,7 +38,7 @@
         <h1>My Bets</h1>
 
 		<div class="container">
-			<h3>Your Open Bets</h3>
+			<h3>Open Bets</h3>
 			{% if your_open_bets %}
 				<table class="table table-striped table-bordered table-condensed">
 					<thead>
@@ -43,8 +75,9 @@
 			<p>You don't have any open bets. Step right up and <a href="#place_bets" data-toggle="modal">place a bet.</a></p>
 			{% endif %}
 		</div>
-		<div class="container">
-            <h3>Your Active Bets</h3>
+
+	<div class="container">
+            <h3>Active Bets</h3>
 			{% if your_active_bets %}
 				<table class="table table-striped table-bordered">
 					<thead>
@@ -77,7 +110,24 @@
 			{% else %}
 			<p>You don't have any active bets. How about accepting some <a href="/bets/open_bets">open bets?</a></p>
 			{% endif %}
-		</div>
+	</div>
+
+	<div class="container">
+            <h3>Completed Bets</h3>
+                <table class="table table-striped table-bordered table-condensed" id="myCompletedBets">
+                        <thead>
+                          <tr>
+                                <th>{% trans "Prop Bet" %}</th>
+                                <th>{% trans "Wager" %}</th>
+                                <th>{% trans "Against" %}</th>
+                                <th>{% trans "Winner" %}</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                </table>
+	</div>
+
     </div>
 
 	<!-- Remove bet modal -->
@@ -103,6 +153,27 @@
 {% endblock %}
 
 {% block morejs %}
+
+	var dt_table = $('#myCompletedBets').dataTable({
+		language: dt_language,  // global variable defined in html
+                order: [],
+		lengthMenu: [10, 25, 50, 100],
+		columnDefs: [
+		    {orderable: true,
+		     searchable: true,
+		     className: "center",
+		     targets: [0, 1, 2, 3]
+		    },
+                    {orderable: false,
+                    targets: -1
+                    }
+		],
+		searching: true,
+		processing: true,
+		serverSide: true,
+		stateSave: false,
+		ajax: MY_COMPLETED_BETS_JSON_URL
+	});
 
         $("#remove-bet-btn").one("click", function() {
                 $(this).click(function () { return false; });
