fix datatables sort

--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -162,10 +162,10 @@
 		    {orderable: true,
 		     searchable: true,
 		     className: "center",
-		     targets: [0, 1, 2, 3]
+		     targets: [0, 1]
 		    },
                     {orderable: false,
-                    targets: -1
+                    targets: [-1, -2]
                     }
 		],
 		searching: true,
