--- a/cfbets/bets/templates/bets/base_admin_bets.html
+++ b/cfbets/bets/templates/bets/base_admin_bets.html
@@ -1,4 +1,35 @@
 {% extends "base.html" %}
+{% load i18n %}
+
+{% block extra_head %}
+    <script type="text/javascript">
+        var ADMIN_BETS_JSON_URL = '{% url "bets:admin_bets_json" %}';
+        // translations for datatables
+        var dt_language = {
+            "emptyTable":     "{% trans "No data available in table" %}",
+            "info":           "{% trans "Showing _START_ to _END_ of _TOTAL_ entries" %}",
+            "infoEmpty":      "{% trans "Showing 0 to 0 of 0 entries" %}",
+            "infoFiltered":   "{% trans "(filtered from _MAX_ total entries)" %}",
+            "infoPostFix":    "",
+            "thousands":      ",",
+            "lengthMenu":     "{% trans "Show _MENU_ entries" %}",
+            "loadingRecords": "{% trans "Loading..." %}",
+            "processing":     "{% trans "Processing..." %}",
+            "search":         "{% trans "Search:" %}",
+            "zeroRecords":    "{% trans "No matching records found" %}",
+            "paginate": {
+                "first":      "{% trans "First" %}",
+                "last":       "{% trans "Last" %}",
+                "next":       "{% trans "Next" %}",
+                "previous":   "{% trans "Previous" %}"
+            },
+            "aria": {
+                "sortAscending":  "{% trans ": activate to sort column ascending" %}",
+                "sortDescending": "{% trans ": activate to sort column descending" %}"
+            }
+        }
+    </script>
+{% endblock %}
 
 {% block base_content %}
 
@@ -70,39 +101,18 @@
 			<br/>
 			<h3>All Closed Prop bets</h3>
 			<p>These prop bets have a marked winner (and have at least one accepted bet).</p>
-				{% if closed_prop_bets %}
-					<table class="table table-striped table-bordered table-condensed" id="propCompleted">
-						<thead>
-						  <tr>
-							<th>Proposer</th>
-							<th>Prop Bet</th>
-							<th>Win / Loss</th>
-							<th></th>
-						  </tr>
-						</thead>
-						<tbody>
-						{% for bet in closed_prop_bets %}
-							<tr>
-								<td>{{ bet.user.get_full_name }}</td>
-								<td>{{ bet.prop_text }}</td>
-							{% if bet.get_won_bet_display == "Win" %}
-								<td>Win</td>
-							{% elif bet.get_won_bet_display == "Loss" %}
-								<td>Loss</td>
-							{% elif bet.get_won_bet_display == "Tie" %}
-								<td>push</td>
-							{% else %}
-								<td></td>
-							{% endif %}
-								<td style="text-align: center; vertical-align: middle">
-									<a href="#" data-href="/bets/undo_prop_bet?id={{ bet.id }}" data-target="#undoPropBet" data-toggle="modal" data-id1="{{ bet.prop_text }}" data-id2="{{ bet.user.get_full_name }}" title="Undo prop bet" class="btn btn-warning btn-xs open-UndoPropBet">undo</a></td>
-							</tr>
-						{% endfor %}
-						</tbody>
-					</table>
-				{% else %}
-					<p>No bets to mark.</p>
-				{% endif %}
+				<table class="table table-striped table-bordered table-condensed" id="propCompleted">
+					<thead>
+					  <tr>
+						<th>{% trans "Proposer" %}</th>
+						<th>{% trans "Prop Bet" %}</th>
+						<th>{% trans "Win / Loss" %}</th>
+						<th></th>
+					  </tr>
+					</thead>
+					<tbody>
+					</tbody>
+				</table>
 
     </div>
 
@@ -130,6 +140,35 @@
 {% endblock %}
 
 {% block morejs %}
+
+	var dt_table = $('#propCompleted').dataTable({
+		language: dt_language,  // global variable defined in html
+                order: [],
+		lengthMenu: [10, 25, 50, 100],
+		columnDefs: [
+		    {orderable: true,
+		     searchable: true,
+		     className: "center",
+		     targets: [0, 1]
+		    },
+                    {orderable: false,
+                    targets: [-1, -2]
+                    },
+                    {targets: -1,
+                    createdCell: function (td, cellData, rowData, row, col) {
+                    $(td).html('<a href="#" data-href="/bets/undo_prop_bet?id=' + cellData[2] +
+                            '" data-target="#undoPropBet" data-toggle="modal" data-id1="' + cellData[1] +
+                            '" data-id2="' + cellData[0] + '" title="Undo prop bet" class="btn btn-warning btn-xs open-UndoPropBet">undo</a></td>')
+                      }
+                    }
+		],
+		searching: true,
+		processing: true,
+		serverSide: true,
+		stateSave: false,
+		ajax: ADMIN_BETS_JSON_URL
+	});
+
         $("#undo-bet-btn").one("click", function() {
                 $(this).click(function () { return false; });
                 });
@@ -154,13 +193,4 @@
 		$(this).find('.btn-warning').attr('href', $(e.relatedTarget).data('href'));
 	});
 
-    $('#propCompleted').dataTable( {
-        "order": [],
-		"columns": [
-			null,
-			null,
-			null,
-			{ "orderable": false, "searchable": false }
-		]
-    } );
 {% endblock %}
