--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -2,189 +2,188 @@
 {% load i18n %}
 
 {% block extra_head %}
-    <script type="text/javascript">
-        var MY_COMPLETED_BETS_JSON_URL = '{% url "bets:my_completed_bets_json" %}';
-        // translations for datatables
+<script type="text/javascript">
+    var MY_COMPLETED_BETS_JSON_URL = '{% url "bets:my_completed_bets_json" %}';
+    // translations for datatables
 
-        var dt_language = {
-            "emptyTable":     "{% trans "No data available in table" %}",
-            "info":           "{% trans "Showing _START_ to _END_ of _TOTAL_ entries" %}",
-            "infoEmpty":      "{% trans "Showing 0 to 0 of 0 entries" %}",
-            "infoFiltered":   "{% trans "(filtered from _MAX_ total entries)" %}",
-            "infoPostFix":    "",
-            "thousands":      ",",
-            "lengthMenu":     "{% trans "Show _MENU_ entries" %}",
-            "loadingRecords": "{% trans "Loading..." %}",
-            "processing":     "{% trans "Processing..." %}",
-            "search":         "{% trans "Search:" %}",
-            "zeroRecords":    "{% trans "No matching records found" %}",
-            "paginate": {
-                "first":      "{% trans "First" %}",
-                "last":       "{% trans "Last" %}",
-                "next":       "{% trans "Next" %}",
-                "previous":   "{% trans "Previous" %}"
-            },
-            "aria": {
-                "sortAscending":  "{% trans ": activate to sort column ascending" %}",
-                "sortDescending": "{% trans ": activate to sort column descending" %}"
-            }
+    var dt_language = {
+        "emptyTable":     "{% trans "No data available in table" %}",
+        "info":           "{% trans "Showing _START_ to _END_ of _TOTAL_ entries" %}",
+        "infoEmpty":      "{% trans "Showing 0 to 0 of 0 entries" %}",
+        "infoFiltered":   "{% trans "(filtered from _MAX_ total entries)" %}",
+        "infoPostFix":    "",
+        "thousands":      ",",
+        "lengthMenu":     "{% trans "Show _MENU_ entries" %}",
+        "loadingRecords": "{% trans "Loading..." %}",
+        "processing":     "{% trans "Processing..." %}",
+        "search":         "{% trans "Search:" %}",
+        "zeroRecords":    "{% trans "No matching records found" %}",
+        "paginate": {
+            "first":      "{% trans "First" %}",
+            "last":       "{% trans "Last" %}",
+            "next":       "{% trans "Next" %}",
+            "previous":   "{% trans "Previous" %}"
+        },
+        "aria": {
+            "sortAscending":  "{% trans ": activate to sort column ascending" %}",
+            "sortDescending": "{% trans ": activate to sort column descending" %}"
         }
-    </script>
+    }
+</script>
 {% endblock %}
 
 {% block base_content %}
+<div class="container">
+    <h1>My Bets</h1>
 
     <div class="container">
-        <h1>My Bets</h1>
-
-		<div class="container">
-			<h3>Open Bets</h3>
-			{% if your_open_bets %}
-				<table class="table table-striped table-bordered table-condensed">
-					<thead>
-					  <tr>
-						<th>Prop Bet</th>
-						<th>Wager</th>
-						<th>Max Bets</th>
-						<th>Bets Remain</th>
-						<th>End Date</th>
-					  </tr>
-					</thead>
-					<tbody>
-					{% for bet in your_open_bets %}
-						<tr>
-							<td>{{ bet.prop_text }}</td>
-							<td>${{ bet.prop_wager }}</td>
-							<td>{{ bet.max_wagers }}</td>
-							<td>{{ bet.remaining_wagers }}</td>
-							<td>{{ bet.end_date|date:"M d Y H:i" }}</td>
-							<td style="text-align: center; vertical-align: middle">
-								<a href="#" data-href="/bets/remove_prop_bet?id={{ bet.id }}"
-                                                                            data-target="#removeBet"
-                                                                            data-toggle="modal"
-                                                                            data-id="{{ bet.prop_text }}"
-                                                                            title="Remove prop bet" class="btn btn-danger btn-sm open-RemoveBet">
-									<span class="glyphicon glyphicon-remove"></span>
-								</a>
-							</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-			{% else %}
-			<p>You don't have any open bets. Step right up and <a href="#place_bets" data-toggle="modal">place a bet.</a></p>
-			{% endif %}
-		</div>
-
-	<div class="container">
-            <h3>Active Bets</h3>
-			{% if your_active_bets %}
-				<table class="table table-striped table-bordered">
-					<thead>
-					  <tr>
-						<th>Proposer</th>
-						<th>Proposee</th>
-						<th>Prop Bet</th>
-						<th>Wager</th>
-					  </tr>
-					</thead>
-                                        <tfoot>
-                                                <tr>
-                                                        <th></th>
-                                                        <th></th>
-                                                        <th></th>
-                                                        <th><span class="badge">{{ your_active_bets_count }} active, ${{ your_active_bets_total_amount }} total</span></th>
-                                                </tr>
-                                        </tfoot>
-					<tbody>
-					{% for bet in your_active_bets %}
-						<tr>
-							<td>{{ bet.accepted_prop.user.get_full_name }}</td>
-							<td>{{ bet.accepted_user.get_full_name }}</td>
-							<td>{{ bet.accepted_prop.prop_text }}</td>
-							<td>${{ bet.accepted_prop.prop_wager }}</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-			{% else %}
-			<p>You don't have any active bets. How about accepting some <a href="/bets/open_bets">open bets?</a></p>
-			{% endif %}
-	</div>
-
-	<div class="container">
-            <h3>Completed Bets</h3>
-                <table class="table table-striped table-bordered table-condensed" id="myCompletedBets">
-                        <thead>
-                          <tr>
-                                <th>{% trans "Prop Bet" %}</th>
-                                <th>{% trans "Wager" %}</th>
-                                <th>{% trans "Against" %}</th>
-                                <th>{% trans "Winner" %}</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                </table>
-	</div>
-
+        <h3>Open Bets</h3>
+        {% if your_open_bets %}
+            <table class="table table-striped table-bordered table-condensed">
+                <thead>
+                    <tr>
+                        <th>Prop Bet</th>
+                        <th>Wager</th>
+                        <th>Max Bets</th>
+                        <th>Bets Remain</th>
+                        <th>End Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for bet in your_open_bets %}
+                    <tr>
+                        <td>{{ bet.prop_text }}</td>
+                        <td>${{ bet.prop_wager }}</td>
+                        <td>{{ bet.max_wagers }}</td>
+                        <td>{{ bet.remaining_wagers }}</td>
+                        <td>{{ bet.end_date|date:"M d Y H:i" }}</td>
+                        <td style="text-align: center; vertical-align: middle">
+                            <a href="#" data-href="/bets/remove_prop_bet?id={{ bet.id }}"
+                                data-target="#removeBet"
+                                data-toggle="modal"
+                                data-id="{{ bet.prop_text }}"
+                                title="Remove prop bet" class="btn btn-danger btn-sm open-RemoveBet">
+                            <span class="glyphicon glyphicon-remove"></span>
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>You don't have any open bets. Step right up and <a href="#place_bets" data-toggle="modal">place a bet.</a></p>
+        {% endif %}
     </div>
 
-	<!-- Remove bet modal -->
-	<div class="modal fade" id="removeBet" tabindex="-1" role="dialog" aria-labelledby="RemoveBet">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="RemoveBet">Remove Bet</h4>
-				</div>
-				<div class="modal-body">
-					<p>Remove your prop bet "<strong><span id="betId"></span></strong>"?</p>
-					<p><small><i>Note: Any accepted bets against this prop <strong>will remain</strong> accepted.</i></small></p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-					<a id="remove-bet-btn" class="btn btn-danger">Remove Bet</a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <h3>Active Bets</h3>
+        {% if your_active_bets %}
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Proposer</th>
+                        <th>Proposee</th>
+                        <th>Prop Bet</th>
+                        <th>Wager</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th><span class="badge">{{ your_active_bets_count }} active, ${{ your_active_bets_total_amount }} total</span></th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    {% for bet in your_active_bets %}
+                        <tr>
+                            <td>{{ bet.accepted_prop.user.get_full_name }}</td>
+                            <td>{{ bet.accepted_user.get_full_name }}</td>
+                            <td>{{ bet.accepted_prop.prop_text }}</td>
+                            <td>${{ bet.accepted_prop.prop_wager }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>You don't have any active bets. How about accepting some <a href="/bets/open_bets">open bets?</a></p>
+        {% endif %}
+    </div>
 
+    <div class="container">
+        <h3>Completed Bets</h3>
+        <table class="table table-striped table-bordered table-condensed" id="myCompletedBets">
+            <thead>
+                <tr>
+                    <th>{% trans "Prop Bet" %}</th>
+                    <th>{% trans "Wager" %}</th>
+                    <th>{% trans "Against" %}</th>
+                    <th>{% trans "Winner" %}</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+
+</div> <!-- first container div -->
+
+<!-- Remove bet modal -->
+<div class="modal fade" id="removeBet" tabindex="-1" role="dialog" aria-labelledby="RemoveBet">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="RemoveBet">Remove Bet</h4>
+            </div>
+            <div class="modal-body">
+                <p>Remove your prop bet "<strong><span id="betId"></span></strong>"?</p>
+                <p><small><i>Note: Any accepted bets against this prop <strong>will remain</strong> accepted.</i></small></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <a id="remove-bet-btn" class="btn btn-danger">Remove Bet</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block morejs %}
+var dt_table = $('#myCompletedBets').dataTable({
+    language: dt_language,  // global variable defined in html
+    order: [],
+    lengthMenu: [10, 25, 50, 100],
+    columnDefs: [
+        {
+            orderable: true,
+            searchable: true,
+            className: "center",
+            targets: [0, 1]
+        },
+        {
+            orderable: false,
+            targets: [-1, -2]
+        }
+    ],
+    searching: true,
+    processing: true,
+    serverSide: true,
+    stateSave: false,
+    ajax: MY_COMPLETED_BETS_JSON_URL
+});
 
-	var dt_table = $('#myCompletedBets').dataTable({
-		language: dt_language,  // global variable defined in html
-                order: [],
-		lengthMenu: [10, 25, 50, 100],
-		columnDefs: [
-		    {orderable: true,
-		     searchable: true,
-		     className: "center",
-		     targets: [0, 1]
-		    },
-                    {orderable: false,
-                    targets: [-1, -2]
-                    }
-		],
-		searching: true,
-		processing: true,
-		serverSide: true,
-		stateSave: false,
-		ajax: MY_COMPLETED_BETS_JSON_URL
-	});
+$("#remove-bet-btn").one("click", function() {
+    $(this).click(function () { return false; });
+});
 
-        $("#remove-bet-btn").one("click", function() {
-                $(this).click(function () { return false; });
-                });
+$('#removeBet').on('show.bs.modal', function (e) {
+    // get the bet text and place it in the modal
+    var betText = $(e.relatedTarget).attr('data-id');
+    $("#betId").html(betText);
 
-	$('#removeBet').on('show.bs.modal', function (e) {
-		// get the bet text and place it in the modal
-		var betText = $(e.relatedTarget).attr('data-id');
-		$("#betId").html(betText);
-
-		// get the href link with bet id and place it in the href
-		$(this).find('.btn-danger').attr('href', $(e.relatedTarget).data('href'));
-	});
+    // get the href link with bet id and place it in the href
+    $(this).find('.btn-danger').attr('href', $(e.relatedTarget).data('href'));
+});
 {% endblock %}
